@@ -3,6 +3,7 @@
 - FreeLook: inherit position bugfix
 - Orthographic cameras allow a Near Clip of 0
 - Bugfix: collider was pushing camera too far if there were multiple overlapping obstacles
+- Bugfix: use IsAssignableFrom instead of IsSubclass in several places
 
 
 <size=20><b>Version 2.3.3</b></size>
